[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "google-generativeai>=0.8.5",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.5.0",
    "mcp==1.1.0",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "redis>=6.2.0",
    "rich==13.9.4",
    "uvicorn[standard]==0.34.0",
]
